--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "Blob.js",
-  "version": "0.0.1",
-  "description": "An HTML5 saveAs() FileSaver implementation",
+  "name": "blob-tmp",
+  "version": "1.0.0",
+  "description": "An HTML5 Blob implementation",
   "main": "Blob.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eligrey/Blob.js"
+    "url": "git+ssh://git@github.com:angular-1x/Blob.js.git"
   },
   "author": "Eli Grey",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/eligrey/Blob.js/issues"
   },
-  "homepage": "https://github.com/eligrey/Blob.js"
+  "homepage": "https://github.com/eligrey/Blob.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "blob",
+    "fileAPI",
+    "HTML5"
+  ]
 }
